@@ -1,3 +1,12 @@
+2008-08-05  Sven Neumann  <sven@gimp.org>
+
+	Merged from trunk:
+
+	* app/widgets/gimpdbusservice.c: open the files from an idle
+	handler.  Opening a file may take a while (in particular if it
+	involves asking the user for input) and we need to respond to the
+	D-Bus call before it times out.
+
 2008-07-27  Sven Neumann  <sven@gimp.org>
 
 	Merged from trunk:
